kubernetes-networks/web-svc-cip.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: web-svc-cip
spec:
    selector:
        app: web
    type: ClusterIP
    ports: 
    - protocol: TCP
      port: 80
      targetPort: 8000
